replaced x button css with class identifier to correct navs visibility issue. pop up feature coming next

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ ul {
     color: black;
 }
 #exitMenu {
-    display: flex;
+    display: hidden;
     font-size: 5vh;
     flex-direction: row;
     height: 6vh;
@@ -81,6 +81,7 @@ ul {
 
 }
 .mobile-closed-menu {
+    top: 0;
     display: flex;
     justify-content: space-between;
     background: rgb(90, 90, 90);
